CTT_Package/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Lab_that_tested__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Lab that tested</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Languages</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Exposure_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Exposure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Monitoring_Date__c</fullName>
        <description>LAST_MONITORING_DATE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Monitoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Onsite_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Onsite Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Link_Type__c</fullName>
        <formula>/**
 * NOTE: This deviates a bit from what we call a &quot;Contact&quot; -- which is a Contact Outreach case, but
 * since we may be flipping Potential Exposures over to Presumed/Potential Positives, we will need a
 * different way to designate &quot;Contacts&quot;. Direction from DPH on this one: &quot;Always set to CONTACT for
 * contacts created in SF only, otherwise NULL&quot;. -LC
 *
 *   Maven_Contact_Id__c -- if this is blank, then that means it was created in Salesforce and not imported from Maven.
 *   ParentId -- if this is not blank, it means it was created as a child of another record, so presumably a CONTACT.
 */
IF(ISBLANK(Maven_Contact_Id__c) &amp;&amp; NOT(ISBLANK(ParentId)), &quot;CONTACT&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>For export to Maven - indicates this is a &quot;Contact&quot; - see embedded comments in formula</inlineHelpText>
        <label>Link Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Inquiry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location Inquiry</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Related Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Name</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Type__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Business/Venue</fullName>
                </value>
                <value>
                    <fullName>Transportation</fullName>
                </value>
                <value>
                    <fullName>Location/Area</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_of_Death__c</fullName>
        <description>LOCATION_OF_DEATH</description>
        <label>Location of Death</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Location_of_Death</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Loss_Of_Smell__c</fullName>
        <label>Loss Of Smell</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Maven_Contact_Id__c</fullName>
        <description>Source system ID of Contact/Case</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Enterprise Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Middle Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Muscle_Aches_Pains__c</fullName>
        <description>SS_MUSCLE_ACHES_PAINS</description>
        <inlineHelpText>Muscle aches/pains (myalgia):</inlineHelpText>
        <label>Muscle Aches &amp; Pains</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_of_Kin_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next of Kin Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>No_Contacts_Reported__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Contacts Reported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_Referral_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Referral Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onsite_Exposure_Location__c</fullName>
        <label>Onsite Exposure Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Location1</fullName>
                </value>
                <value>
                    <fullName>Location2</fullName>
                </value>
                <value>
                    <fullName>Location3</fullName>
                </value>
                <value>
                    <fullName>Location4</fullName>
                </value>
                <value>
                    <fullName>Location5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Ordering_Facility_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Facility: Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference Code	ORDERING_FACILITY</description>
        <label>Ordering Facility</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cases (Provider Name)</relationshipLabel>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ordering_Provider_State__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Ordering Provider State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Clinical_Complications__c</fullName>
        <description>CLINICAL_COMPLICATIONS_OTHER</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Clinical Complications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Death_Location__c</fullName>
        <description>LOCATION_OF_DEATH_OTHER_SPECIFY</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Death Location</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Hospital_Name__c</fullName>
        <description>HOSPITAL_NAME_OTHER</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Other Hospital (specify):</inlineHelpText>
        <label>Other Hospital Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Other_Symptoms__c</fullName>
        <description>SS_OTHER_SPECIFY</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other Symptoms</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_high_risk_exposure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other high risk exposure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>OUTCOME</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Outreach_Outcome__c</fullName>
        <description>This field is populated when a user moves from outreach underway to monitoring and support.</description>
        <label>Outreach Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Partially completed</fullName>
                </value>
                <value>
                    <fullName>Referred to LBOH</fullName>
                </value>
                <value>
                    <fullName>Couldn&apos;t be reached</fullName>
                </value>
                <value>
                    <fullName>Refused to interview</fullName>
                </value>
                <value>
                    <fullName>Contact diagnosed with COVID-19</fullName>
                </value>
                <value>
                    <fullName>Contact diagnosed</fullName>
                    <isActive>false</isActive>
                    <label>Contact diagnosed</label>
                </value>
                <value>
                    <fullName>Declined call</fullName>
                    <isActive>false</isActive>
                    <label>Declined call</label>
                </value>
                <value>
                    <fullName>Existing Case</fullName>
                    <isActive>false</isActive>
                    <label>Existing Case</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Case_Link__c</fullName>
        <description>On click case number , this field navigate to related case page of parent case.</description>
        <formula>HYPERLINK(&quot;/lightning/r/Case/&quot;+Id+&quot;/view&quot;, CaseNumber)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Place_traveled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Place traveled?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Email_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to confirm whether or not to send Policy Details.</description>
        <label>Policy Email Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pregnancy_Detail__c</fullName>
        <description>PREGNANT_SPECIFY</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Gestational age (in weeks):</inlineHelpText>
        <label>X-Pregnancy Detail</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presumptive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Presumptive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provided_Isolation_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to confirm if the contact has provided isolation instructions to the agent.</description>
        <label>Provided Isolation Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provided_Quarantine_Instructions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provided Quarantine Instructions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quarantine_End_Date__c</fullName>
        <description>Quarantine Ends from 14 days after Last Exposure Date</description>
        <formula>/*Quarantine End Date = Last Exposure Date + 14 Days*/
 Last_Exposure_Date__c  +  14</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarantine End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommendation_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Recommendation Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recommendation_Reason__c</fullName>
        <label>Recommendation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asymptomatic Requirements</fullName>
                </value>
                <value>
                    <fullName>Test Based Requirements</fullName>
                </value>
                <value>
                    <fullName>Household Requirements</fullName>
                </value>
                <value>
                    <fullName>Hospital Discharge Requirements</fullName>
                </value>
                <value>
                    <fullName>OCONUS Travel Requirements</fullName>
                </value>
                <value>
                    <fullName>Completed Self-observation Period</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_for_Test__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to confirm whether or not the contact has been referred for testing.</description>
        <label>Referred for Test</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_to_Resource_Coordinator_Reason__c</fullName>
        <description>Reason for Referred to Resource Coordinator</description>
        <label>Referred to Resource Coordinator Reason</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Other Items</fullName>
                </value>
                <value>
                    <fullName>Medication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_to_Resource_Coordinator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Case Object Checkbox if referred to Resource Coordinator</description>
        <label>Referred to Resource Coordinator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referred_to_a_Provider__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Referred to a Provider</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_to_Case__c</fullName>
        <label>Relationship to Case</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Friend</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
                <value>
                    <fullName>Colleague</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Risk_Category__c</fullName>
        <label>Risk Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Risk</fullName>
                </value>
                <value>
                    <fullName>Medium Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLA_2h_Countdown__c</fullName>
        <formula>IF(NOT(ISBLANK(Interview_Completed_Date__c)), &apos;DONE&apos;,
  IF(
    SLA_Created_Plus_2h__c - NOW() &gt;= 0 ,
    /* Positive - show time to target date -- SLA_Date - NOW() */
    TEXT( FLOOR( SLA_Created_Plus_2h__c - NOW()) ) &amp; &quot; d &quot;
    &amp; TEXT( FLOOR( MOD( (SLA_Created_Plus_2h__c - NOW()) * 24, 24 ) ) ) &amp; &quot; h &quot;
    &amp; TEXT( ROUND( MOD( (SLA_Created_Plus_2h__c - NOW()) * 24 * 60, 60 ), 0 ) ) &amp; &quot; m&quot;,
    /* Negative - show time past target date -- NOW() - SLA_Date */
    &quot;-&quot; &amp; TEXT( FLOOR( NOW() - SLA_Created_Plus_2h__c ) ) &amp; &quot; d &quot;
    &amp; TEXT( FLOOR( MOD( (NOW() - SLA_Created_Plus_2h__c) * 24, 24 ) ) ) &amp; &quot; h &quot;
    &amp; TEXT( ROUND( MOD( (NOW() - SLA_Created_Plus_2h__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot; m&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>2h Countdown</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_48h_Countdown__c</fullName>
        <formula>IF (NOT(ISBLANK(Interview_Completed_Date__c)), &apos;DONE&apos;,
  IF(
    SLA_Created_Plus_48h__c - NOW() &gt;= 0 ,
    /* Positive - show time to target date -- SLA_Date - NOW() */
    TEXT( FLOOR( SLA_Created_Plus_48h__c - NOW()) ) &amp; &quot; d &quot;
    &amp; TEXT( FLOOR( MOD( (SLA_Created_Plus_48h__c - NOW()) * 24, 24 ) ) ) &amp; &quot; h &quot;
    &amp; TEXT( ROUND( MOD( (SLA_Created_Plus_48h__c - NOW()) * 24 * 60, 60 ), 0 ) ) &amp; &quot; m&quot;,
    /* Negative - show time past target date -- NOW() - SLA_Date */
    &quot;-&quot; &amp; TEXT( FLOOR( NOW() - SLA_Created_Plus_48h__c ) ) &amp; &quot; d &quot;
    &amp; TEXT( FLOOR( MOD( (NOW() - SLA_Created_Plus_48h__c) * 24, 24 ) ) ) &amp; &quot; h &quot;
    &amp; TEXT( ROUND( MOD( (NOW() - SLA_Created_Plus_48h__c) * 24 * 60, 60 ), 0 ) ) &amp; &quot; m&quot;
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>48h Countdown</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Created_Plus_2h__c</fullName>
        <formula>/* + X is in days, so we need 2h / (24h/d)) */
CreatedDate + (2 / 24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created + 2h</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SLA_Created_Plus_48h__c</fullName>
        <formula>/* + X is in days, so 48 == 2 day, so + 2 */
CreatedDate + 2</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created + 48h</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Self_Reported_Positive__c</fullName>
        <formula>TEXT(Self_Reported_Test_Outcome__c)=&quot;Positive&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Self-Reported Positive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_Reported_Test_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Self-Reported Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Self_Reported_Test_Outcome__c</fullName>
        <label>Self-Reported Test Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_Reported_Testing_Facility__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Self-Reported Testing Facility</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sore_Throat__c</fullName>
        <description>SS_SORE_THROAT</description>
        <label>Sore Throat</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Speaking_with_Household_Member__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox is to check whether or not the contact is speaking with a household member.</description>
        <label>Speaking with Household Member</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>State</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Street_Input__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symptom_Onset_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Symptom Onset Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Symptom_Resolution_Date__c</fullName>
        <description>SYMPTOM_RESOLUTION_DATE</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Symptom Resolution Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Symptoms__c</fullName>
        <inlineHelpText>Did case have symptoms?</inlineHelpText>
        <label>Symptoms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Teams</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Name__c</fullName>
        <description>Tests: Test</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Result_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Result Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Test_Status__c</fullName>
        <label>Test Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Test_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Taken_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Taken Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_to_Completion__c</fullName>
        <formula>IF (Interview_Completed_Date__c&lt;&gt;NULL, (Interview_Completed_Date__c - CreatedDate)*24, NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time to Completion</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Exposure__c</fullName>
        <label>Type of Exposure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Air travel</fullName>
                </value>
                <value>
                    <fullName>Community Area</fullName>
                </value>
                <value>
                    <fullName>Conference Room</fullName>
                </value>
                <value>
                    <fullName>Gym</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Post Office</fullName>
                </value>
                <value>
                    <fullName>Mailroom</fullName>
                </value>
                <value>
                    <fullName>Warehouse</fullName>
                </value>
                <value>
                    <fullName>Restroom</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Count__c</fullName>
        <inlineHelpText>Number of Underlying Illness records</inlineHelpText>
        <label>Underlying Illness Count</label>
        <summaryForeignKey>Underlying_Illness__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>X-Underlying Illness Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_New__c</fullName>
        <formula>IF(Underlying_Illness_Count__c &gt; 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>&quot;Yes&quot; if has any Underlying Illness records, &quot;No&quot; otherwise</inlineHelpText>
        <label>X-Underlying Illness New</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Specify_Other__c</fullName>
        <description>Maven Export Report: UNDERLYING_ILLNESS_OTHER_DESC</description>
        <encryptionScheme>None</encryptionScheme>
        <label>X-Underlying Illness Specify Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Underlying_Illness_Specify__c</fullName>
        <label>X-Underlying Illness Specify</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Underlying_Illness</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Underlying_Illness__c</fullName>
        <description>UNDERLYING_ILLNESS</description>
        <inlineHelpText>Does patient have underlying illness?</inlineHelpText>
        <label>Underlying Illness</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vomiting__c</fullName>
        <description>SS_VOMITING</description>
        <label>Vomiting</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No_Unknown</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Work Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Workday__c</fullName>
        <formula>(CASE(VALUE(MID(TEXT(CreatedDate),12,2)),
0, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (12/24))))+&quot; &quot; +&apos;12:00:00&apos;),
1, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (11/24))))+&quot; &quot; +&apos;12:00:00&apos;),
2, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (10/24))))+&quot; &quot; +&apos;12:00:00&apos;),
3, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (9/24))))+&quot; &quot; +&apos;12:00:00&apos;),
4, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (8/24))))+&quot; &quot; +&apos;12:00:00&apos;),
5, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (7/24))))+&quot; &quot; +&apos;12:00:00&apos;),
6, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (6/24))))+&quot; &quot; +&apos;12:00:00&apos;),
7, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (5/24))))+&quot; &quot; +&apos;12:00:00&apos;),
8, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (4/24))))+&quot; &quot; +&apos;12:00:00&apos;),
9, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (3/24))))+&quot; &quot; +&apos;12:00:00&apos;),
10, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (2/24))))+&quot; &quot; +&apos;12:00:00&apos;),
11, DATETIMEVALUE(TEXT(DATEVALUE((CreatedDate + (1/24))))+&quot; &quot; +&apos;12:00:00&apos;),
12, CreatedDate,
13, CreatedDate,
14, CreatedDate,
15, CreatedDate,
16, CreatedDate,
17, CreatedDate,
18, CreatedDate,
19, CreatedDate,
20, CreatedDate,
21, CreatedDate,
22, CreatedDate,
23, CreatedDate,
(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Available Work Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>X_Underlying_Illness_Specify__c</fullName>
        <description>UNDERLYING_ILLNESS_SPECIFY</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Please Specify:</inlineHelpText>
        <label>X-Underlying Illness Specify</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code_Input__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllClosedCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <columns>Close_Reason__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Closed Inquiries</label>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Test_Result_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Positive_Outreach</value>
        </filters>
        <filters>
            <field>Presumptive__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Awaiting Return To Work</value>
        </filters>
        <label>All Open Positive Inquiries</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Close_Reason__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
        <columns>Close_Reason__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
</CustomObject>